git-annex (3.20120230) UNRELEASED; urgency=low

  * "here" can be used to refer to the current repository,
    which can read better than the old "." (which still works too).
  * Directory special remotes now support chunking files written to them,
    avoiding writing files larger than a specified size.

 -- Joey Hess <joeyh@debian.org>  Thu, 01 Mar 2012 22:34:27 -0400

git-annex (3.20120229) unstable; urgency=low

  * Fix test suite to not require a unicode locale.
  * Fix cabal build failure. Thanks, Sergei Trofimovich

 -- Joey Hess <joeyh@debian.org>  Wed, 29 Feb 2012 02:31:31 -0400

git-annex (3.20120227) unstable; urgency=low

  * Modifications to support ghc 7.4's handling of filenames.
    This version can only be built with ghc 7.4 or newer. See the ghc7.0
    branch for older ghcs.
  * S3: Fix irrefutable pattern failure when accessing encrypted S3
    credentials.
  * Use the haskell IfElse library.
  * Fix teardown of stale cached ssh connections.
  * Fixed to use the strict state monad, to avoid leaking all kinds of memory
    due to lazy state update thunks when adding/fixing many files.
  * Fixed some memory leaks that occurred when committing journal files.
  * Added a annex.queuesize setting, useful when adding hundreds of thousands
    of files on a system with plenty of memory.
  * whereis: Prints the urls of files that the web special remote knows about.
  * addurl --fast: Verifies that the url can be downloaded (only getting
    its head), and records the size in the key.
  * When checking that an url has a key, verify that the Content-Length,
    if available, matches the size of the key.
  * addurl: Added a --file option, which can be used to specify what
    file the url is added to. This can be used to override the default
    filename that is used when adding an url, which is based on the url.
    Or, when the file already exists, the url is recorded as another
    location of the file.
  * addurl: Normalize badly encoded urls.